erDiagram
    FARM ||--o{ USER : are
    FARM ||--o{ PARCEL : contine
    FARM ||--o{ INVENTORY_ITEM : are
    FARM ||--o{ INVENTORY_REQUEST : primeste
    FARM ||--o{ MACHINERY : detine
    USER ||--o{ NOTIFICATION : primeste
    USER ||--o{ INVENTORY_REQUEST : initiaza
    PARCEL ||--o{ ACTIVITY : are
    PARCEL ||--o{ CROP_SEASON : are
    PARCEL ||--o{ PARCEL_NDVI_HISTORY : are
    ACTIVITY ||--o{ ACTIVITY_CONSUMPTION : contine
    INVENTORY_ITEM ||--o{ ACTIVITY_CONSUMPTION : este_consumat
    ACTIVITY }o--o{ USER : atribuie_muncitori
    ACTIVITY }o--o{ MACHINERY : foloseste
    MACHINERY ||--o{ MAINTENANCE_LOG : are
